--- a/src/patternfly/components/Switch/themes/dark/switch.scss
+++ b/src/patternfly/components/Switch/themes/dark/switch.scss
@@ -3,8 +3,9 @@
 @mixin pf-v5-theme-dark-switch() {
   .#{$switch} {
     --#{$switch}__toggle-icon--Color: var(--#{$pf-global}--BackgroundColor--100);
+    --#{$switch}__toggle-icon-disabled--Color: var(--#{$pf-global}--Color--100);
     --#{$switch}__input--not-checked__label--Color: var(--#{$pf-global}--Color--100);
-    --#{$switch}__input--disabled__toggle--before--BackgroundColor: var(--#{$pf-global}--BackgroundColor--100);
+    --#{$switch}__input--disabled__toggle--before--BackgroundColor: var(--#{$pf-global}--Color--100);
     --#{$switch}__toggle--before--BoxShadow: none;
   }
 }
